Add references section to the description

--- a/anki-web-description.html
+++ b/anki-web-description.html
@@ -20,3 +20,7 @@ Simone Gaiarin (simgunz)
 <b>License</b>
 Software distributed under the GNU General Public License version 3 (GNU GPL v3).
 <a href="http://www.gnu.org/copyleft/gpl.html" rel="nofollow">http://www.gnu.org/copyleft/gpl.html</a>
+
+<b>References</b>
+<a href="https://github.com/simgunz/anki21-addons_fast-cards-reposition" rel="nofollow">Github page</a>
+<a href="https://simgunz.org/anki-add-on-fast-cards-reposition/" rel="nofollow">Blog post</a>
